Preperations made to split the functionality between 2 Arduino\'s.

--- a/mcp/Makefile
+++ b/mcp/Makefile
@@ -2,4 +2,4 @@ BOARD_TAG    = nano328
 MONITOR_PORT = /dev/cu.usbserial*
 ARDUINO_LIBS = DS1307RTC Time Bounce LiquidCrystal VirtualWire
 
-include ../arduino-mk/Arduino.mk
+include ../../arduino-mk/Arduino.mk
