--- a/mcp/Makefile
+++ b/mcp/Makefile
@@ -1,5 +1,5 @@
-BOARD_TAG    = nano328
-MONITOR_PORT = /dev/cu.usbserial*
-ARDUINO_LIBS = DS1307RTC Time Bounce LiquidCrystal VirtualWire
+BOARD_TAG    = uno
+MONITOR_PORT = /dev/cu.usbmodemfd141
+ARDUINO_LIBS = DS1307RTC Time Bounce LiquidCrystal Wire VirtualWire EtherCard
 
 include ../../arduino-mk/Arduino.mk
