Got LCD working again, now with I2C adapter board to save pins.

--- a/bit/Makefile
+++ b/bit/Makefile
@@ -1,5 +1,5 @@
 BOARD_TAG    = nano328
-MONITOR_PORT = /dev/cu.usbserial*
+MONITOR_PORT = /dev/cu.usbserial-A50202BR
 ARDUINO_LIBS = TimerOne VirtualWire
 
 include ../../arduino-mk/Arduino.mk
