--- a/mcp/Makefile
+++ b/mcp/Makefile
@@ -1,5 +1,5 @@
 BOARD_TAG    = uno
 MONITOR_PORT = /dev/cu.usbmodemfd141
-ARDUINO_LIBS = DS1307RTC Time Bounce LiquidCrystal Wire VirtualWire EtherCard
+ARDUINO_LIBS = DS1307RTC Time Bounce LCD Wire VirtualWire EtherCard
 
 include ../../arduino-mk/Arduino.mk
